--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -76,3 +76,8 @@ button:active {
     font-style: italic;
     color: #555;
 }
+
+.displayed-quote-container{
+    max-width: 700px;
+    overflow-wrap: break-word;
+}
